2003-11-11  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* TEMPLATE-INST/Array-tc.cc, TEMPLATE-INST/Array-c.cc,
	TEMPLATE-INST/Array-os.cc, TEMPLATE-INST/Array-sym.cc,
	ov-typeinfo.cc: Use new INSTANTIATE_ARRAY macro.

	* data.cc (do_permute): New function.
	(Fpermute, Fipermute): Use it.

	* ov-base.cc (octave_base_value::permute): New function.
	* ov-base.h: Provide decl.

	* ov.h (octave_value::ipermute): New function.

2003-11-11  Petter Risholm  <risholm@stud.ntnu.no>

	* data.cc (Fpermute, Fipermute): New functions.
	* ov.h (octave_value::permute): New function.
	* ov-base-mat.h (octave_base_matrix::permute): New function.

2003-11-10  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* oct-obj.h (octave_value_list): Internal representation is now
	std::vector instead of Array.

	* ov-list.h, ov-list.cc: Internal representation is now Cell, not
	octave_value_list.
	(Flist): Print one-time warning.

	* ov.cc (octave_value::octave_value (const octave_value_list&, bool)):
	Cope with octave_cs_list not being derived from octave_list.

	* ov-cs-list.cc (octave_cs_list): Handle conversion of Cell array
	to octave_value_list here.

	* ov-cs-list.h (class octave_cs_list): Derive from
	octave_base_value, not octave_list.

	* ov-cs-list.h, ov-cs-list.cc: Remove commented-out code.

	* TEMPLATE-INST/Array-tc.cc (resize_fill_value): Use modern
	specialization syntax.

	* ov-cell.cc (octave_cell::print_raw): Use dim_vector::str.

	* Cell.cc, Cell.h, debug.cc, file-io.cc, load-save.cc,
	oct-fstrm.cc, oct-iostrm.cc, oct-iostrm.h, oct-map.cc, oct-map.h,
	oct-prcstrm.cc, oct-stdstrm.h, oct-stream.cc, oct-strstrm.h,
	octave.cc, ov-base.h, ov-cell.cc, ov.cc, ov.h, pt-cell.h,
	pt-mat.cc, pt-mat.h, pt-plot.cc, pt-stmt.cc, variables.cc,
	DLD-FUNCTIONS/rand.cc: Avoid -Wshadow warnings.

2003-11-01  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* ov.h (octave_base_value::is_bool_matrix): New virtual function.
	* ov-base.h (octave_base_value::is_bool_matrix): New function.
